fix: added missing border to .differential img

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -313,6 +313,7 @@ main .differential {
 
 main .differential img {
     width: 100%;
+    border-radius: 2rem;
 }
 
 main .knowledge {
